...
                    }
                }
                Section(header: Text("On the Web")) {
                    LinkButton(symbol: .init(name: "Routines Website", file: "Royal Icon", url: "https://getroutines.app", color: .purple, sfSymbolName: nil))
                    LinkButton(symbol: .init(name: "Stygian Tech Website", file: "Stygian Tech Favicon", url: "https://stygiantech.dev", color: .black, sfSymbolName: nil))
                }
                Section(header: Text("Donate")) {
                    Text("Coming Soon...")
                }
                Section(header: Text("Special Thanks")) {
                    LinkListCardView(urlString: "https://github.com/jeremieb/social-symbols/tree/main", name: "Social Symbols")
                    LinkListCardView(urlString: "https://github.com/alessiorubicini/SFSymbolsPickerForSwiftUI", name: "SF Symbols Picker for SwiftUI")
                    LinkListCardView(urlString: "https://github.com/mono0926/LicensePlist", name: "LicensePlist")
...
